pages migrate - will leave off old field_descriptive_image and make media image.

--- a/config/install/migrate_plus.migration.d7_njsgcpages.yml
+++ b/config/install/migrate_plus.migration.d7_njsgcpages.yml
@@ -26,14 +26,14 @@ process:
   revision_uid: revision_uid
   revision_log: log
   revision_timestamp: timestamp
-  field_image:
-    source: field_descriptive_image
-    process:
-      target_id:
-        plugin: migration_lookup
-        migration: d7_njsgcimages
-        source: fid
-      alt: alt
+  # field_image:
+  #   source: field_descriptive_image
+  #   process:
+  #     target_id:
+  #       plugin: migration_lookup
+  #       migration: d7_njsgcimages
+  #       source: fid
+  #     alt: alt
   body:
     plugin: sub_process
     source: body
@@ -45,7 +45,7 @@ process:
 
 destination:
   plugin: entity:node
-  default_bundle: basic_page
+  default_bundle: page
 
 # migration_dependencies:
 #   required:
